[package]
name = "blender-file-finder"
version = "0.1.0"
description = "Blender File Finder"
authors = ["Sam"]
edition = "2021"

[lib]
name = "blender_file_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
walkdir = "2"
